--- a/action.yml
+++ b/action.yml
@@ -4,15 +4,16 @@ inputs:
   file-extensions:
     description: 'What file extensions to run through auto-formatter'
     required: true
-    default: 'c'
   style:
     description: 'Style guide'
-    default: 'google'
     required: true
   exclude-dirs:
     description: "Directories you want to exclude from being auto-formatted, relative to document root"
     required: false
     default: ""
+  token:
+    description: "Token for github"
+    required: true
 runs:
   using: 'node12'
   main: 'out/index.js'
