--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,14 @@ inputs:
   file-extensions:
     description: 'What file extensions to run through auto-formatter'
     required: true
-  style:
-    description: 'Style guide'
-    required: true
+  c-style:
+    description: 'Style guide for C-based languages formatted with clang'
+    default: google
+    required: false
+  python-style:
+    description: 'Style guide for python'
+    default: pep8
+    required: false
   exclude-dirs:
     description: "Directories you want to exclude from being auto-formatted, relative to document root"
     required: false
