--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "outDir": "out",
+    "outDir": "dist",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
